opam-version: "2.0"
maintainer: "david-engelmann"
homepage: "https://github.com/david-engelmann/arangodb"

bug-reports: "https://github.com/david-engelmann/arangodb/issues"
dev-repo: "git+https://github.com/david-engelmann/arangodb.git"
license: "MIT"
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
depends: [
    "ocaml" {>= "4.14.0"}
    "core"
    "async"
    "dune" {>= "2.0.0"}
    "uri" {>= "4.2.0"}
    "lwt" {>= "5.6.1"}
    "httpaf" {>= "0.7.1"}
    "cohttp" {>= "5.1.0"}
    "cohttp-lwt-unix"
    "cohttp-async"
    "httpaf-lwt-unix"
    "ssl"
    "lwt_ssl"
    "jose"
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "OCaml-based Arangodb tools"
description: "
OCaml-based Arangodb tools
"
